--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": ["./*.json"]
+		"ignore": ["./*.json", "./packages/api/worker-configuration.d.ts"]
 	},
 	"formatter": {
 		"enabled": true,
