--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -6,15 +6,17 @@
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev --test-scheduled",
 		"start": "wrangler dev --test-scheduled",
-		"cf-typegen": "wrangler types"
+		"cf-typegen": "wrangler types",
+		"sandbox": "pnpm dlx tsx src/sandbox.ts"
 	},
 	"devDependencies": {
 		"@types/jsdom": "^21.1.7",
+		"tsx": "^4.19.4",
 		"typescript": "^5.5.2",
 		"wrangler": "^4.19.1"
 	},
 	"dependencies": {
-		"jsdom": "^26.1.0",
+		"linkedom": "^0.18.11",
 		"neverthrow": "^8.2.0"
 	}
 }
