--- a/packages/headless-crawler/package.json
+++ b/packages/headless-crawler/package.json
@@ -9,6 +9,8 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
+    "bootstrap":"aws-vault exec cdk-bootstrap-user -- cdk bootstrap",
+    "deploy": "cdk deploy",
     "type-check": "tsc --noEmit",
     "test:crawler": "ts-node lib/lambda/handler/crawler/test/index.ts",
     "test:scraper": "ts-node lib/lambda/handler/scraper/test/index.ts"
@@ -18,6 +20,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
     "aws-cdk": "2.1018.0",
+    "esbuild": "^0.25.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
