cdkのデプロイコマンドの追加

--- a/packages/headless-crawler/package.json
+++ b/packages/headless-crawler/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "cdk": "cdk",
     "bootstrap":"aws-vault exec cdk-bootstrap-user -- cdk bootstrap  --cloudformation-execution-policies arn:aws:iam::aws:policy/AdministratorAccess",
-    "deploy": "cdk deploy",
+    "deploy": "aws-vault exec cdk-deploy -- cdk deploy",
     "type-check": "tsc --noEmit",
     "test:crawler": "ts-node lib/lambda/handler/crawler/test/index.ts",
     "test:scraper": "ts-node lib/lambda/handler/scraper/test/index.ts"
