--- a/packages/headless-crawler/package.json
+++ b/packages/headless-crawler/package.json
@@ -28,6 +28,7 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@sho/schema": "workspace:*",
     "aws-cdk-lib": "2.199.0",
     "constructs": "^10.0.0",
     "effect": "^3.16.5",
