--- a/packages/headless-crawler/package.json
+++ b/packages/headless-crawler/package.json
@@ -32,6 +32,7 @@
     "aws-cdk-lib": "2.199.0",
     "constructs": "^10.0.0",
     "effect": "^3.16.5",
+    "playwright": "^1.53.1",
     "zod": "^3.25.67"
   }
 }
