--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -2,7 +2,7 @@
   "name": "@sho/schema",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts", 
+  "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +15,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "playwright": "^1.53.1",
     "typescript": "^5.8.3"
   }
 }
