--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
+    "chanfana": "^2.8.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
