--- a/packages/headless-crawler/package.json
+++ b/packages/headless-crawler/package.json
@@ -31,6 +31,7 @@
     "@sho/schema": "workspace:*",
     "aws-cdk-lib": "2.199.0",
     "constructs": "^10.0.0",
+    "dotenv": "^17.0.0",
     "effect": "^3.16.5",
     "playwright": "^1.53.1",
     "zod": "^3.25.67"
