--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "hello-work-searcher",
   "version": "1.0.0",
   "description": "",
-  "private":true,
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "type-check":"pnpm -r exec tsc --noEmit ",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.0"
+    "lint-staged": "^16.1.0",
+    "typescript": "^5.8.3"
   }
 }
