--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,22 +1,25 @@
 {
   "name": "@sho/schema",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "main": "./dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.11.0",
+  "scripts": {
+    "clean": "rimraf dist",
+    "build": "pnpm clean && tsc -p tsconfig.build.json"
+  },
   "dependencies": {
     "chanfana": "^2.8.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
     "playwright": "^1.53.1",
+    "rimraf": "^6.0.1",
     "typescript": "^5.8.3"
   }
 }
