--- a/packages/headless-crawler/package.json
+++ b/packages/headless-crawler/package.json
@@ -5,7 +5,6 @@
     "headless-crawler": "bin/headless-crawler.js"
   },
   "scripts": {
-    "build": "tsc --build tsconfig.build.json",
     "test": "jest",
     "bootstrap": "aws-vault exec cdk-bootstrap-user -- cdk bootstrap  --cloudformation-execution-policies arn:aws:iam::aws:policy/AdministratorAccess",
     "deploy": "aws-vault exec cdk-deploy -- cdk deploy",
@@ -25,12 +24,13 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.840.0",
     "@sho/schema": "workspace:*",
     "aws-cdk-lib": "2.199.0",
     "constructs": "^10.0.0",
     "dotenv": "^17.0.0",
     "effect": "^3.16.5",
     "playwright": "^1.53.1",
-    "zod": "^3.25.67"
+    "zod": "^3.25.74"
   }
 }
