--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
+  "name": "frontend2",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "react-server"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "packageManager": "pnpm@10.11.0",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "@lazarv/react-server": "0.0.0-experimental-77fcecd-20250629-70347fa9"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "experimental": "link:@types/react-dom/experimental",
+    "typescript": "^5.8.3"
   }
 }
