--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "type-check":"pnpm -r exec tsc --noEmit ",
+    "type-check": "pnpm -r exec tsc --noEmit ",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -24,5 +24,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "@hono/swagger-ui": "^0.5.2"
   }
 }
