refactor(job-store): job-store2 を job-store へリネーム・移行
- packages/job-store2 以下の全ファイルを packages/job-store へリネーム
- 今後は job-store2 の内容を job-store として運用・開発を継続

--- a/packages/job-store/wrangler.jsonc
+++ b/packages/job-store/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "job-store2",
+  "name": "job-store",
   "main": "src/index.ts",
   "compatibility_date": "2025-07-19",
   "observability": {
@@ -24,8 +24,8 @@
   "d1_databases": [
     {
       "binding": "DB",
-      "database_name": "job-store-3",
-      "database_id": "a50e92a9-333e-4c08-b6b6-91133aae6b96"
+      "database_name": "job-store",
+      "database_id": "99b54ef6-2e19-436e-8676-b50ef2d98dda"
     }
   ]
   /**
