refactor(frontend,schema): フロントエンド型定義をschemaパッケージに統合\n\n- frontend/type.tsを削除し、型定義・スキーマをpackages/schema配下に移動・新設\n- frontendのJob表示・型importをschemaパッケージ参照に修正\n- schemaパッケージにfrontend用型・スキーマを追加\n- 依存関係・pnpm-lock.yamlを更新\n

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
-    "@lazarv/react-server": "0.0.0-experimental-77fcecd-20250629-70347fa9"
+    "@lazarv/react-server": "0.0.0-experimental-77fcecd-20250629-70347fa9",
+    "@sho/schema": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
