refactor: job-storeスキーマの統合と関連モジュールの更新
- headless-crawler: scraper系・shared/helper・error・functions/jobQueueHandler/helperの型や実装を修正
- job-store: drizzle用SQL/メタ追加、型定義・スキーマ整理、app/db/schemaリファクタリング
- schema: job-store関連型・スキーマを統合、不要なjobFetch/jobInsert/jobListを削除
- 各パッケージのpackage.json, pnpm-lock.yamlを更新

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     }
   },
   "scripts": {
