--- a/packages/headless-crawler/package.json
+++ b/packages/headless-crawler/package.json
@@ -9,7 +9,8 @@
     "bootstrap": "aws-vault exec cdk-bootstrap-user -- cdk bootstrap  --cloudformation-execution-policies arn:aws:iam::aws:policy/AdministratorAccess",
     "deploy": "aws-vault exec cdk-deploy -- cdk deploy",
     "verify:crawler": "ts-node lib/domains/crawler/playground/index.ts",
-    "verify:scraper": "ts-node lib/domains/scraper/playground/index.ts"
+    "verify:scraper": "ts-node lib/domains/scraper/playground/index.ts",
+    "type-check": "pnpm exec tsc --noEmit"
   },
   "devDependencies": {
     "@sparticuz/chromium": "^137.0.1",
@@ -21,7 +22,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.6.3",
+    "zod": "^3.25.74"
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.840.0",
@@ -30,7 +32,6 @@
     "constructs": "^10.0.0",
     "dotenv": "^17.0.0",
     "effect": "^3.16.5",
-    "playwright": "^1.53.1",
-    "zod": "^3.25.74"
+    "playwright": "^1.53.1"
   }
 }
