--- a/packages/job-store/package.json
+++ b/packages/job-store/package.json
@@ -28,6 +28,7 @@
 		"hono-openapi": "^0.4.8",
 		"neverthrow": "^8.2.0",
 		"valibot": "^1.1.0",
-		"zod": "~3.25.74"
+		"zod": "~3.25.74",
+		"@sho/schema": "workspace:*"
 	}
 }
