fix(ci): npmをpnpmに修正

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Build schema package
         working-directory: ./packages/schema
         run: |
-          npm ci
-          npm run build
+          pnpm install --frozen-lockfile
+          pnpm build
 
       # AWS 認証情報（ベース）設定
       - name: Configure AWS Credentials (base)
@@ -51,5 +51,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}
           AWS_SESSION_TOKEN: ${{ env.AWS_SESSION_TOKEN }}
         run: |
-          npm ci
-          npx cdk deploy --all --require-approval never
+          pnpm install --frozen-lockfile
+          pnpm exec cdk deploy --all --require-approval never
