--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -4,7 +4,7 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
+      "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
   },
