feat(job-store):事前にバンドルするように - job-storeからschemaのAPIを利用しようとするとimport Errorが出てしまうので、事前にバンドルしたものをデプロイすることに

--- a/packages/job-store/wrangler.jsonc
+++ b/packages/job-store/wrangler.jsonc
@@ -5,7 +5,7 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "job-store",
-  "main": "src/index.ts",
+  "main": "dist/index.mjs",
   "compatibility_date": "2025-07-19",
   "observability": {
     "enabled": true
