--- a/packages/job-store/package.json
+++ b/packages/job-store/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"deploy": "wrangler deploy",
+		"deploy": "pnpm build && wrangler deploy",
+		"build": "tsup",
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
 		"test": "vitest",
@@ -13,6 +14,7 @@
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
 		"@types/node": "^24.0.15",
 		"drizzle-kit": "^0.31.4",
+		"tsup": "^8.5.0",
 		"tsx": "^4.20.3",
 		"typescript": "^5.5.2",
 		"vitest": "~3.2.0",
@@ -21,6 +23,7 @@
 	"dependencies": {
 		"@hono/zod-openapi": "^1.0.2",
 		"@hono/zod-validator": "^0.7.2",
+		"@sho/schema": "workspace:*",
 		"chanfana": "^2.8.1",
 		"dotenv": "^17.0.0",
 		"drizzle-orm": "^0.44.2",
@@ -28,7 +31,6 @@
 		"hono-openapi": "^0.4.8",
 		"neverthrow": "^8.2.0",
 		"valibot": "^1.1.0",
-		"zod": "~3.25.74",
-		"@sho/schema": "workspace:*"
+		"zod": "~3.25.74"
 	}
 }
