fix(ci): アクセスキーの露出の抑制 - assuome roleでキーが出力されてしまっていた - 今後はoicdに移行する、一旦temporary fixという形

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,16 +35,25 @@ jobs:
           aws-secret-access-key: ${{ secrets.BASE_AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-1
 
-      # Assume Role して一時クレデンシャル取得
+      # Assume Role して一時クレデンシャル取得（マスク付き）
       - name: Assume Role
         id: assume-role
         env:
           ASSUME_ROLE_ARN: ${{ secrets.ASSUME_ROLE_ARN }}
         run: |
           CREDS_JSON=$(aws sts assume-role --role-arn $ASSUME_ROLE_ARN --role-session-name github-actions)
-          echo "AWS_ACCESS_KEY_ID=$(echo $CREDS_JSON | jq -r '.Credentials.AccessKeyId')" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=$(echo $CREDS_JSON | jq -r '.Credentials.SecretAccessKey')" >> $GITHUB_ENV
-          echo "AWS_SESSION_TOKEN=$(echo $CREDS_JSON | jq -r '.Credentials.SessionToken')" >> $GITHUB_ENV
+
+          AWS_ACCESS_KEY_ID=$(echo $CREDS_JSON | jq -r '.Credentials.AccessKeyId')
+          AWS_SECRET_ACCESS_KEY=$(echo $CREDS_JSON | jq -r '.Credentials.SecretAccessKey')
+          AWS_SESSION_TOKEN=$(echo $CREDS_JSON | jq -r '.Credentials.SessionToken')
+
+          echo "::add-mask::$AWS_ACCESS_KEY_ID"
+          echo "::add-mask::$AWS_SECRET_ACCESS_KEY"
+          echo "::add-mask::$AWS_SESSION_TOKEN"
+
+          echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY" >> $GITHUB_ENV
+          echo "AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN" >> $GITHUB_ENV
 
       # CDK デプロイ（Assume Role の一時クレデンシャルを利用）
       - name: Deploy AWS CDK
@@ -53,9 +62,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ env.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}
           AWS_SESSION_TOKEN: ${{ env.AWS_SESSION_TOKEN }}
-          JOB_STORE_ENDPOINT: ${{secrets.JOB_STORE_ENDPOINT}}
-          MAIL_ADDRESS: ${{secrets.MAIL_ADDRESS}}
-          QUEUE_URL: ${{secrets.QUEUE_URL}}
+          JOB_STORE_ENDPOINT: ${{ secrets.JOB_STORE_ENDPOINT }}
+          MAIL_ADDRESS: ${{ secrets.MAIL_ADDRESS }}
+          QUEUE_URL: ${{ secrets.QUEUE_URL }}
         run: |
           pnpm install --frozen-lockfile
           pnpm exec cdk deploy --all --require-approval never
