fix(types): 外部パッケージの型もバンドルするように - distはgitignoreしたいが、後で - 型定義ファイルがすごく大きくなったので、biome.jsonでignoreした

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,11 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["./*.json", "./packages/*/worker-configuration.d.ts"]
+    "ignore": [
+      "./*.json",
+      "./packages/*/worker-configuration.d.ts",
+      "./packages/types/dist/*.d.ts"
+    ]
   },
   "formatter": {
     "enabled": true,
