--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy CDK with Assume Role
+name: Deploy CDK and Check Crawler with Asume Role
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 permissions:
-  id-token: write     # ← OIDCで必要
+  id-token: write     # ← OIDCで必要a
   contents: read      # ← checkoutに必要
 
 jobs:
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+
       - uses: pnpm/action-setup@v4
 
       - name: Build schema package
@@ -34,18 +35,33 @@ jobs:
           pnpm build
 
       # 👇 OIDCによるAssumeRole
-      - name: Configure AWS Credentials via OIDC
+      - name: Configure AWS CDK Credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.ASSUME_ROLE_ARN }}
           role-session-name: github-actions-oidc
           aws-region: ap-northeast-1
+
       - name: Deploy AWS CDK
         working-directory: ./packages/headless-crawler
         env:
-          JOB_STORE_ENDPOINT: ${{secrets.JOB_STORE_ENDPOINT}}
-          MAIL_ADDRESS: ${{secrets.MAIL_ADDRESS}}
-          QUEUE_URL: ${{secrets.QUEUE_URL}}
+          JOB_STORE_ENDPOINT: ${{ secrets.JOB_STORE_ENDPOINT }}
+          MAIL_ADDRESS: ${{ secrets.MAIL_ADDRESS }}
+          QUEUE_URL: ${{ secrets.QUEUE_URL }}
         run: |
           pnpm install --frozen-lockfile
           pnpm exec cdk deploy --all --require-approval never
+
+      - name: Configure Hello Work Crawler Invocation Credentials via OIDC
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.HELLO_WORK_CRAWLER_INVOCATION_ROLE_FOR_GITHUB_ACTION }}
+          role-session-name: github-actions-oidc
+          aws-region: ap-northeast-1
+      - name: Invoke Lambda function
+        run: |
+          aws lambda invoke \
+            --function-name HeadlessCrawlerStack-CrawlingFunctionDA39E31E-o6IdHOZ3QvEB \
+            --payload '{}' \
+            response.json
+          cat response.json
