--- a/packages/job-store/package.json
+++ b/packages/job-store/package.json
@@ -8,7 +8,8 @@
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
 		"test": "vitest",
-		"cf-typegen": "wrangler types"
+		"cf-typegen": "wrangler types",
+		"copy-schema": "pnpm exec copy-schema ./src/db/schema.ts"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
@@ -24,6 +25,7 @@
 		"@hono/zod-openapi": "^1.0.2",
 		"@hono/zod-validator": "^0.7.2",
 		"@sho/schema": "workspace:*",
+		"@sho/scripts": "workspace:*",
 		"chanfana": "^2.8.1",
 		"dotenv": "^17.0.0",
 		"drizzle-orm": "^0.44.2",
