--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
 
       - uses: pnpm/action-setup@v4
 
-      - name: Build schema package
-        working-directory: ./packages/schema
+      - name: Build models package
+        working-directory: ./packages/models
         run: |
           pnpm install --frozen-lockfile
           pnpm build
