--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -12,6 +12,7 @@
     "build": "tsup"
   },
   "dependencies": {
+    "drizzle-orm": "^0.44.2",
     "zod": "^3.25.74"
   },
   "devDependencies": {
