reafactor(frontend): フロントエンドアプリを移行 - ルーティングをtansatck routerに変更、@lazarv/react-serverだとデプロイがうまくいかなかったため、vercelだとダメだった

--- a/biome.json
+++ b/biome.json
@@ -10,7 +10,8 @@
     "ignore": [
       "./*.json",
       "./packages/*/worker-configuration.d.ts",
-      "./packages/types/dist/*.d.ts"
+      "./packages/types/dist/*.d.ts",
+      "./apps/hello-work-job-searcher/src/routeTree.gen.ts"
     ]
   },
   "formatter": {
