feat(hello-work-job-searcher): cloud flareへのデプロイの設定

--- a/apps/hello-work-job-searcher/package.json
+++ b/apps/hello-work-job-searcher/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build && tsc --noEmit",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "deploy": "npm run build && wrangler deploy"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.130.2",
