--- a/apps/hello-work-job-searcher/package.json
+++ b/apps/hello-work-job-searcher/package.json
@@ -16,7 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.24.2",
-    "@sho/schema": "workspace:*"
+    "@sho/models": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
