--- a/packages/headless-crawler/package.json
+++ b/packages/headless-crawler/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.840.0",
-    "@sho/schema": "workspace:*",
+    "@sho/models": "workspace:*",
     "aws-cdk-lib": "2.207.0",
     "constructs": "^10.0.0",
     "dotenv": "^17.0.0",
