--- a/packages/job-store/package.json
+++ b/packages/job-store/package.json
@@ -24,7 +24,7 @@
 	"dependencies": {
 		"@hono/zod-openapi": "^1.0.2",
 		"@hono/zod-validator": "^0.7.2",
-		"@sho/schema": "workspace:*",
+		"@sho/models": "workspace:*",
 		"@sho/scripts": "workspace:*",
 		"chanfana": "^2.8.1",
 		"dotenv": "^17.0.0",
