fix(hello-work-job-searcher): package.jsonの名前の修正 - これのせいでpre-commitフックもスカってた

--- a/apps/hello-work-job-searcher/package.json
+++ b/apps/hello-work-job-searcher/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tanstack-start-example-basic",
+  "name": "hello-work-job-searcher",
   "private": true,
   "sideEffects": false,
   "type": "module",
