--- a/packages/job-store/package.json
+++ b/packages/job-store/package.json
@@ -15,6 +15,7 @@
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
 		"@types/node": "^24.0.15",
 		"drizzle-kit": "^0.31.4",
+		"drizzle-orm": "^0.44.2",
 		"tsup": "^8.5.0",
 		"tsx": "^4.20.3",
 		"typescript": "^5.5.2",
@@ -28,10 +29,9 @@
 		"@sho/scripts": "workspace:*",
 		"chanfana": "^2.8.1",
 		"dotenv": "^17.0.0",
-		"drizzle-orm": "^0.44.2",
+		"effect": "^3.16.5",
 		"hono": "^4.8.3",
 		"hono-openapi": "^0.4.8",
-		"neverthrow": "^8.2.0",
 		"valibot": "^1.1.0",
 		"zod": "~3.25.74"
 	}
