--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,16 +46,16 @@ jobs:
           pnpm install --frozen-lockfile
           pnpm exec cdk deploy --all --require-approval never
 
-      - name: Configure Hello Work Crawler Invocation Credentials via OIDC
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.HELLO_WORK_CRAWLER_INVOCATION_ROLE_FOR_GITHUB_ACTION }}
-          role-session-name: github-actions-oidc
-          aws-region: ap-northeast-1
-      - name: Invoke Lambda function
-        run: |
-          aws lambda invoke \
-            --function-name HeadlessCrawlerStack-CrawlingFunctionDA39E31E-o6IdHOZ3QvEB \
-            --payload '{}' \
-            response.json
-          cat response.json
+      # - name: Configure Hello Work Crawler Invocation Credentials via OIDC
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     role-to-assume: ${{ secrets.HELLO_WORK_CRAWLER_INVOCATION_ROLE_FOR_GITHUB_ACTION }}
+      #     role-session-name: github-actions-oidc
+      #     aws-region: ap-northeast-1
+      # - name: Invoke Lambda function
+      #   run: |
+      #     aws lambda invoke \
+      #       --function-name HeadlessCrawlerStack-CrawlingFunctionDA39E31E-o6IdHOZ3QvEB \
+      #       --payload '{}' \
+      #       response.json
+      #     cat response.json
