--- a/apps/hello-work-job-searcher/.output/public/.vite/manifest.json
+++ b/apps/hello-work-job-searcher/.output/public/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "../../../../../~start/default-client-entry.tsx": {
-    "file": "assets/main-DKJXPZBr.js",
+    "file": "assets/main-BqLCTzz5.js",
     "name": "main",
     "src": "../../../../../~start/default-client-entry.tsx",
     "isEntry": true,
@@ -11,7 +11,7 @@
       "src/routes/_pathlessLayout/_nested-layout/route-a.tsx?tsr-split=component"
     ],
     "css": [
-      "assets/main-DqD7WXES.css"
+      "assets/main-DBgALjJ4.css"
     ],
     "assets": [
       "assets/app-eJEYcWQU.css"
@@ -22,7 +22,7 @@
     "src": "/Users/zuoxiangtailang/hello-work-searcher/apps/hello-work-job-searcher/src/styles/app.css"
   },
   "src/routes/_pathlessLayout/_nested-layout.tsx?tsr-split=component": {
-    "file": "assets/_nested-layout-Bcqs6xpw.js",
+    "file": "assets/_nested-layout-MHM4bPqc.js",
     "name": "_nested-layout",
     "src": "src/routes/_pathlessLayout/_nested-layout.tsx?tsr-split=component",
     "isDynamicEntry": true,
@@ -31,7 +31,7 @@
     ]
   },
   "src/routes/_pathlessLayout/_nested-layout/route-a.tsx?tsr-split=component": {
-    "file": "assets/route-a-BuNk0JPW.js",
+    "file": "assets/route-a-0Jwl4kbe.js",
     "name": "route-a",
     "src": "src/routes/_pathlessLayout/_nested-layout/route-a.tsx?tsr-split=component",
     "isDynamicEntry": true,
@@ -40,7 +40,7 @@
     ]
   },
   "src/routes/_pathlessLayout/_nested-layout/route-b.tsx?tsr-split=component": {
-    "file": "assets/route-b-fftlRURb.js",
+    "file": "assets/route-b-BLUJJ3aq.js",
     "name": "route-b",
     "src": "src/routes/_pathlessLayout/_nested-layout/route-b.tsx?tsr-split=component",
     "isDynamicEntry": true,
@@ -49,7 +49,7 @@
     ]
   },
   "src/routes/index.tsx?tsr-split=component": {
-    "file": "assets/index-B3xKpQzU.js",
+    "file": "assets/index-o5XeAMx4.js",
     "name": "index",
     "src": "src/routes/index.tsx?tsr-split=component",
     "isDynamicEntry": true,
