fix(job-store): 非メインブランチのデプロイコマンドの修正 - プルリクのデプロイが失敗してるので - worker buildではpnpm --filter job-store no-main-deploy と指定する

--- a/packages/job-store/package.json
+++ b/packages/job-store/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"deploy": "pnpm build && wrangler deploy",
+		"no-main-deploy": "wrangler versions upload",
 		"build": "tsup",
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
