--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy CDK and Check Crawler with Asume Role
+name: Deploy CDK and Check Crawler with Assume Role
 
 on:
   push:
@@ -6,8 +6,8 @@ on:
       - main
 
 permissions:
-  id-token: write     # ← OIDCで必要a
-  contents: read      # ← checkoutに必要
+  id-token: write # ← OIDCで必要
+  contents: read # ← checkoutに必要
 
 jobs:
   deploy:
@@ -21,6 +21,12 @@ jobs:
           node-version: 20
 
       - uses: pnpm/action-setup@v4
+        with:
+          version: 10.13.1
+
+      # 念のためcorepack有効化（pnpm/action-setupが管理する場合は不要）
+      - name: Enable corepack
+        run: corepack enable
 
       - name: Build models package
         working-directory: ./packages/models
@@ -45,17 +51,3 @@ jobs:
         run: |
           pnpm install --frozen-lockfile
           pnpm exec cdk deploy --all --require-approval never
-
-      # - name: Configure Hello Work Crawler Invocation Credentials via OIDC
-      #   uses: aws-actions/configure-aws-credentials@v4
-      #   with:
-      #     role-to-assume: ${{ secrets.HELLO_WORK_CRAWLER_INVOCATION_ROLE_FOR_GITHUB_ACTION }}
-      #     role-session-name: github-actions-oidc
-      #     aws-region: ap-northeast-1
-      # - name: Invoke Lambda function
-      #   run: |
-      #     aws lambda invoke \
-      #       --function-name HeadlessCrawlerStack-CrawlingFunctionDA39E31E-o6IdHOZ3QvEB \
-      #       --payload '{}' \
-      #       response.json
-      #     cat response.json
