--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Configure AWS CDK Credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.ASSUME_ROLE_ARN }}
+          role-to-assume: ${{ secrets.CDK_DEPLOY_ROLE_ARN }}
           role-session-name: github-actions-oidc
           aws-region: ap-northeast-1
 
