--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "bin": {
-    "copy-schema": "./dist/copy-schema.mjs"
+  "directories": {
+    "bin": "bin"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +15,6 @@
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.1.0",
-    "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
