feat(hello-work-searcher): 求人詳細画面のデータを本物と差し替え - ついでにcopy-schemaのエラーの修正、本当は別で切りたかったけど、めんどいので。よくない

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -2,6 +2,7 @@
   "name": "@sho/scripts",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "directories": {
     "bin": "bin"
