--- a/apps/hello-work-job-searcher/package.json
+++ b/apps/hello-work-job-searcher/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@sho/models": "workspace:*",
+    "@tanstack/react-virtual": "^3.13.12",
+    "next": "15.4.5",
     "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "next": "15.4.5"
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^22.0.0",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "typescript": "^5"
   }
 }
