fix(ci/run-lambda-weekly-day): パーミッションの修正

--- a/.github/workflows/run-lambda-weekly-days.yml
+++ b/.github/workflows/run-lambda-weekly-days.yml
@@ -3,6 +3,9 @@ name: Run Lambda on Weekdays Midnight JST
 on:
   schedule:
     - cron: "0 15 * * 1-5" # 月〜金のJST 0時
+permissions:
+  id-token: write # ← OIDCで必要
+  contents: read # ← checkoutに必要
 
 jobs:
   run_lambda:
