--- a/apps/hello-work-job-searcher/package.json
+++ b/apps/hello-work-job-searcher/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sho/models": "workspace:*",
     "@tanstack/react-virtual": "^3.13.12",
+    "neverthrow": "^8.2.0",
     "next": "15.4.5",
     "react": "19.1.1",
     "react-dom": "19.1.1"
