--- a/apps/hello-work-job-searcher/package.json
+++ b/apps/hello-work-job-searcher/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sho/models": "workspace:*",
+    "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-virtual": "^3.13.12",
     "neverthrow": "^8.2.0",
     "next": "15.4.5",
