--- a/packages/job-store/package.json
+++ b/packages/job-store/package.json
@@ -30,9 +30,9 @@
 		"@sho/scripts": "workspace:*",
 		"chanfana": "^2.8.1",
 		"dotenv": "^17.0.0",
-		"effect": "^3.16.5",
 		"hono": "^4.8.3",
 		"hono-openapi": "^0.4.8",
+		"neverthrow": "^8.2.0",
 		"valibot": "^1.1.0",
 		"zod": "~3.25.74"
 	}
