--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
@@ -7,25 +7,36 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [
-      "./*.json",
-      "./packages/*/worker-configuration.d.ts",
-      "./packages/types/dist/*.d.ts",
-      "./apps/hello-work-job-searcher/src/routeTree.gen.ts",
-      "./apps/hello-work-job-searcher/.output/**"
+    "includes": [
+      "**",
+      "!**/*.json",
+      "!packages/**/*/worker-configuration.d.ts",
+      "!packages/types/dist/**/*.d.ts",
+      "!apps/hello-work-job-searcher/src/routeTree.gen.ts",
+      "!apps/hello-work-job-searcher/.output/**"
     ]
   },
   "formatter": {
     "enabled": true,
     "indentStyle": "space"
   },
-  "organizeImports": {
-    "enabled": true
-  },
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "recommended": true,
+      "style": {
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
+      }
     }
   },
   "javascript": {
