--- a/.github/workflows/run-lambda-weekly-days.yml
+++ b/.github/workflows/run-lambda-weekly-days.yml
@@ -24,7 +24,9 @@ jobs:
       - name: Install AWS CLI
         run: |
           sudo apt-get update
-          sudo apt-get install -y awscli
+          sudo apt-get install -y python3-pip
+          pip3 install --upgrade --user awscli
+          export PATH=$PATH:~/.local/bin
 
       - name: Invoke Lambda function
         run: |
