fix(models): job-storeの求人一覧で、求人詳細のスキーマの修正 -  https://github.com/cloudflare/chanfana/issues/167#issue-2470366210 - paramとqueryで不可解なエラーが出る

--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -12,6 +12,7 @@
     "build": "tsup"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^8.1.0",
     "drizzle-orm": "^0.44.2",
     "zod": "^3.25.74"
   },
