--- a/packages/job-store/package.json
+++ b/packages/job-store/package.json
@@ -32,6 +32,7 @@
 		"dotenv": "^17.0.0",
 		"hono": "^4.8.3",
 		"hono-openapi": "^0.4.8",
+		"hono-rate-limiter": "^0.4.2",
 		"neverthrow": "^8.2.0",
 		"valibot": "^1.1.0",
 		"zod": "~3.25.74"
