--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "find-up": "^7.0.0",
     "fs-extra": "^11.3.0",
-    "neverthrow": "^8.2.0"
+    "neverthrow": "^8.2.0",
+    "tsx": "^4.20.3"
   }
 }
