refactor: tanStack queryからjotaiに移行、設計思想の制約を解消
- TanStack Queryの戦略的キャッシュ管理は本アプリの要件に過剰と判断
- TanStack Queryの設計思想による制約を排除し、システムの抽象化を改善
- 依存関係を@tanstack/react-queryからjotaiに変更
- バーチャルスクロール + 最大3000件程度の環境に適したシンプルな状態管理を実装
- セッター的なアプローチは本来避けたいが、現状の実装として妥協
- 将来的にはイベント駆動でのデータ更新を検討（現在は実装方法を模索中）
- jobClientの実行環境を明確化：jobStoreClientOnServer/jobStoreClientOnBrowserに命名変更
- Jotaiのatomを使用した軽量な求人リスト状態管理を新規作成
- ブラウザ側APIクライアント(jobStoreClientOnBrowser)を新規実装
- TanStack QueryのQueryProviderとuseInfiniteJobListフックを削除
- JobOverViewListコンポーネントをJotai + TanStack Virtual構成に変更
- 無限スクロール機能をJotaiのatomベースで再実装
- RootLayoutにJotaiのProviderを追加
- サーバーサイドでの初期データ取得処理を最適化

--- a/apps/hello-work-job-searcher/package.json
+++ b/apps/hello-work-job-searcher/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@sho/models": "workspace:*",
-    "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-virtual": "^3.13.12",
+    "jotai": "^2.13.1",
     "neverthrow": "^8.2.0",
     "next": "15.4.6",
     "react": "19.1.1",
