refactor: プロジェクト名をHello Work Software Jobsに変更
- プロジェクト名を「Hello Work Searcher」から「Hello Work Software Jobs」に統一
- ソフトウェア関連求人に特化したことを明確化
- README.mdのタイトルと説明文を更新
- PORTFOLIO_DETAIL.mdのタイトルと概要を更新
- package.jsonのnameフィールドを更新

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-work-searcher",
+  "name": "hello-work-software-jobs",
   "type": "module",
   "version": "1.0.0",
   "description": "",
